--- a/notebooks/jupyter/Raster_Mask.ipynb
+++ b/notebooks/jupyter/Raster_Mask.ipynb
@@ -284,20 +284,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#test = rasterio.open(infilepath+'africa1k_2015_mask_1000c600.tif')"
+    "test = rasterio.open(infilepath+'africa1k_2000_mask_1000c600.tif')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#test_poly.to_file(outfilepath+'20181130_africa1k_2015_mask_1000c600_poly.shp', driver='ESRI Shapefile')"
+    "test_poly = raster_poly(test,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>POLYGON ((-33.325417 41.79125, -33.325417 -51....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>POLYGON ((20.057916 -34.533749, 20.057916 -34....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>POLYGON ((9.849583000000001 37.332917, 9.84958...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>POLYGON ((21.566249 -34.200416, 21.574582 -34....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>POLYGON ((19.882916 -34.467083, 19.882916 -34....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>POLYGON ((22.024582 -34.192083, 22.057916 -34....</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            geometry\n",
+       "0  POLYGON ((-33.325417 41.79125, -33.325417 -51....\n",
+       "1  POLYGON ((20.057916 -34.533749, 20.057916 -34....\n",
+       "2  POLYGON ((9.849583000000001 37.332917, 9.84958...\n",
+       "3  POLYGON ((21.566249 -34.200416, 21.574582 -34....\n",
+       "4  POLYGON ((19.882916 -34.467083, 19.882916 -34....\n",
+       "5  POLYGON ((22.024582 -34.192083, 22.057916 -34...."
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_poly.head(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>POLYGON ((20.057916 -34.533749, 20.057916 -34....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>POLYGON ((9.849583000000001 37.332917, 9.84958...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>POLYGON ((21.566249 -34.200416, 21.574582 -34....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>POLYGON ((19.882916 -34.467083, 19.882916 -34....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>POLYGON ((22.024582 -34.192083, 22.057916 -34....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>POLYGON ((19.174583 -34.408749, 19.191249 -34....</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            geometry\n",
+       "1  POLYGON ((20.057916 -34.533749, 20.057916 -34....\n",
+       "2  POLYGON ((9.849583000000001 37.332917, 9.84958...\n",
+       "3  POLYGON ((21.566249 -34.200416, 21.574582 -34....\n",
+       "4  POLYGON ((19.882916 -34.467083, 19.882916 -34....\n",
+       "5  POLYGON ((22.024582 -34.192083, 22.057916 -34....\n",
+       "6  POLYGON ((19.174583 -34.408749, 19.191249 -34...."
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop first row, which is bounding box of Africa\n",
+    "test_poly = test_poly.drop(test_poly.index[0], axis = 0)\n",
+    "test_poly.head(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test_poly.to_file(outfilepath+'20181130_africa1k_2000_mask_1000c600_poly.shp', driver='ESRI Shapefile')"
    ]
   },
   {
@@ -305,19 +470,6 @@
    "metadata": {},
    "source": [
     "### Cell to write out mask as geotiff as needed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kwargs = africa1k_2000.meta\n",
-    "kwargs.update(dtype=rasterio.float32, count = 1)\n",
-    "\n",
-    "with rasterio.open(infilepath+'africa1k_2015_mask_1000c600.tif', 'w', **kwargs) as dst:\n",
-    "         dst.write_band(1, mask_1000c600.astype(rasterio.float32))\n"
    ]
   },
   {
