--- a/notebooks/jupyter/Raster_Mask.ipynb
+++ b/notebooks/jupyter/Raster_Mask.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,8 @@
     "import skimage.io as skio\n",
     "import time\n",
     "import copy\n",
-    "from shapely.geometry import Polygon"
+    "from shapely.geometry import Polygon\n",
+    "import os"
    ]
   },
   {
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'driver': 'GTiff', 'dtype': 'float32', 'nodata': -3.4028234663852886e+38, 'width': 12575, 'height': 11161, 'count': 1, 'crs': CRS({'init': 'epsg:4326'}), 'transform': Affine(0.00833333329999305, 0.0, -33.3254172868223,\n",
+      "       0.0, -0.00833333329999305, 41.791250202105076)}\n"
+     ]
+    }
+   ],
    "source": [
     "# Need to build function to loop through files\n",
     "\n",
@@ -132,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -140,7 +150,7 @@
    "source": [
     "# Let's try to make the mask directy with rasterio\n",
     "\n",
-    "def raster_mask(raster, band, density):\n",
+    "def raster_mask_poly(raster, band, density):\n",
     "    \"\"\"Fucntion makes numpy array for of raster then applies mask.\n",
     "    requires rasterio object, band number, and density as float on int \n",
     "    returns dict of polygons and numpy mask\n",
@@ -168,11 +178,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def raster_mask(raster, band, density):\n",
+    "    \"Function returns raster mask\"\n",
+    "    \n",
+    "    mask = raster.read(band)\n",
+    "    mask[mask < density] = 0 # mask as zeros and ones\n",
+    "    mask[mask >= density] = 1\n",
+    "    \n",
+    "    return mask"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask600, geom600, poly600 = raster_mask(africa1k_2015, 1, 600)"
+    "mask600, geom600, poly600 = raster_mask(africa1k_2000, 1, 600)"
    ]
   },
   {
@@ -200,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "poly.to_file(outfilepath+'WPafrica1k_2000_footprint.shp', driver='ESRI Shapefile')"
+    "# poly.to_file(outfilepath+'WPafrica1k_2000_footprint.shp', driver='ESRI Shapefile')"
    ]
   },
   {
@@ -218,23 +244,23 @@
    "source": [
     "# By Ryan Avery \n",
     "\n",
-    "import numpy as np\n",
-    "import scipy.ndimage as ndimage\n",
+    "# import numpy as np\n",
+    "# import scipy.ndimage as ndimage\n",
     "\n",
-    "def remove_isolated_pixels(mask1, mask2, struct=np.ones((3,3))):\n",
-    "    \"\"\"\n",
-    "    Unions two binary numpy arrays of the same shape.\n",
-    "    Takes this unioned array and removes solitary pixels.\n",
-    "    Struct should be a binary 3x3 numpy array to define\n",
-    "    connectivity rule. Binary mask arrays should be the \n",
-    "    shape.\n",
-    "    \"\"\"\n",
-    "    union_arr = np.logical_or(mask1, mask2)*1\n",
-    "    id_regions, num_ids = ndimage.label(union_arr, structure=struct)\n",
-    "    id_sizes = np.array(ndimage.sum(union_arr, id_regions, range(num_ids + 1)))\n",
-    "    area_mask = (id_sizes == 1)\n",
-    "    union_arr[area_mask[id_regions]] = 0\n",
-    "    return union_arr\n"
+    "# def remove_isolated_pixels(mask1, mask2, struct=np.ones((3,3))):\n",
+    "#     \"\"\"\n",
+    "#     Unions two binary numpy arrays of the same shape.\n",
+    "#     Takes this unioned array and removes solitary pixels.\n",
+    "#     Struct should be a binary 3x3 numpy array to define\n",
+    "#     connectivity rule. Binary mask arrays should be the \n",
+    "#     shape.\n",
+    "#     \"\"\"\n",
+    "#     union_arr = np.logical_or(mask1, mask2)*1\n",
+    "#     id_regions, num_ids = ndimage.label(union_arr, structure=struct)\n",
+    "#     id_sizes = np.array(ndimage.sum(union_arr, id_regions, range(num_ids + 1)))\n",
+    "#     area_mask = (id_sizes == 1)\n",
+    "#     union_arr[area_mask[id_regions]] = 0\n",
+    "#     return union_arr\n"
    ]
   },
   {
@@ -243,7 +269,134 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_1000c600 = remove_isolated_pixels(mask1000, mask600)"
+    "# mask_1000c600 = remove_isolated_pixels(mask1000, mask600)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The work below is for AGU on WorldPopData 12-04-18"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/tana-crunch/cascade/projects/NTL'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()\n",
+    "os.chdir('/home/cascade/tana-crunch-cascade/projects/NTL/')\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src import raster_funcs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'driver': 'GTiff', 'dtype': 'float32', 'nodata': -3.4028234663852886e+38, 'width': 12575, 'height': 11161, 'count': 1, 'crs': CRS({'init': 'epsg:4326'}), 'transform': Affine(0.00833333329999305, 0.0, -33.3254172868223,\n",
+      "       0.0, -0.00833333329999305, 41.791250202105076)}\n",
+      "{'driver': 'GTiff', 'dtype': 'float32', 'nodata': -3.4028234663852886e+38, 'width': 12575, 'height': 11161, 'count': 1, 'crs': CRS({'init': 'epsg:4326'}), 'transform': Affine(0.00833333329999305, 0.0, -33.3254172868223,\n",
+      "       0.0, -0.00833333329999305, 41.791250202105076)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = \"AFR_PPP_2000_adj_v2.tif\"\n",
+    "africa1k_2000 = rasterio.open(infilepath+file) #<----- changes to 2020 18/13/11 @ 2pm \n",
+    "print(africa1k_2000.meta)\n",
+    "\n",
+    "file = \"AFR_PPP_2015_adj_v2.tif\"\n",
+    "africa1k_2015 = rasterio.open(infilepath+file) #<----- changes to 2020 18/13/11 @ 2pm \n",
+    "print(africa1k_2015.meta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set bands\n",
+    "WP2000_600 = raster_mask(africa1k_2000, 1, 600)\n",
+    "WP2000_1000 = raster_mask(africa1k_2000, 1, 1000)\n",
+    "WP2015_600 = raster_mask(africa1k_2015, 1, 600)\n",
+    "WP2015_1000 = raster_mask(africa1k_2015, 1, 1000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WP2000_1000c600 = raster_funcs.remove_isolated_pixels(WP2000_1000, WP2000_600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WP2015_1000c600 = raster_funcs.remove_isolated_pixels(WP2015_1000, WP2015_600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for geom, val in rasterio.features.shapes(WP2015_1000c600, transform = africa1k_2015.transform):\n",
+    "        \n",
+    "    # Transform shapes from the dataset's own coordinate\n",
+    "    # reference system to CRS84 (EPSG:4326).\n",
+    "    geom = rasterio.warp.transform_geom(africa1k_2015.crs, 'EPSG:4326', geom, precision=6) # WGS84 (EPSG 4326)\n",
+    "    \n",
+    "# turn geom into Polygon object from shapely    \n",
+    "# Polygon(geom['coordinates'][0])\n",
+    "poly_gdf = gpd.GeoDataFrame()\n",
+    "for i, poly in enumerate(geom['coordinates']):\n",
+    "    poly_gdf.loc[i,'geometry']= Polygon(poly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop first row, which is bounding box of Africa and the write \n",
+    "poly_gdf = poly_gdf.drop(poly_gdf.index[0], axis = 0)\n",
+    "poly_gdf.head(6)\n",
+    "\n",
+    "# poly_gdf.to_file(outfilepath+'20181204_africa1k_2015_mask_1000c600_poly.shp', driver='ESRI Shapefile')"
    ]
   },
   {
@@ -255,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,154 +455,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>POLYGON ((-33.325417 41.79125, -33.325417 -51....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>POLYGON ((20.057916 -34.533749, 20.057916 -34....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>POLYGON ((9.849583000000001 37.332917, 9.84958...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>POLYGON ((21.566249 -34.200416, 21.574582 -34....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>POLYGON ((19.882916 -34.467083, 19.882916 -34....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>POLYGON ((22.024582 -34.192083, 22.057916 -34....</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            geometry\n",
-       "0  POLYGON ((-33.325417 41.79125, -33.325417 -51....\n",
-       "1  POLYGON ((20.057916 -34.533749, 20.057916 -34....\n",
-       "2  POLYGON ((9.849583000000001 37.332917, 9.84958...\n",
-       "3  POLYGON ((21.566249 -34.200416, 21.574582 -34....\n",
-       "4  POLYGON ((19.882916 -34.467083, 19.882916 -34....\n",
-       "5  POLYGON ((22.024582 -34.192083, 22.057916 -34...."
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_poly.head(6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>POLYGON ((20.057916 -34.533749, 20.057916 -34....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>POLYGON ((9.849583000000001 37.332917, 9.84958...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>POLYGON ((21.566249 -34.200416, 21.574582 -34....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>POLYGON ((19.882916 -34.467083, 19.882916 -34....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>POLYGON ((22.024582 -34.192083, 22.057916 -34....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>POLYGON ((19.174583 -34.408749, 19.191249 -34....</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            geometry\n",
-       "1  POLYGON ((20.057916 -34.533749, 20.057916 -34....\n",
-       "2  POLYGON ((9.849583000000001 37.332917, 9.84958...\n",
-       "3  POLYGON ((21.566249 -34.200416, 21.574582 -34....\n",
-       "4  POLYGON ((19.882916 -34.467083, 19.882916 -34....\n",
-       "5  POLYGON ((22.024582 -34.192083, 22.057916 -34....\n",
-       "6  POLYGON ((19.174583 -34.408749, 19.191249 -34...."
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# drop first row, which is bounding box of Africa\n",
     "test_poly = test_poly.drop(test_poly.index[0], axis = 0)\n",
@@ -458,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,6 +487,23 @@
    "metadata": {},
    "source": [
     "### Cell to write out mask as geotiff as needed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write out 1000 mask on WP2000 as .tif\n",
+    "\n",
+    "kwargs = africa1k_2000.meta\n",
+    "\n",
+    "# Update kwargs (change in data type)\n",
+    "kwargs.update(dtype=rasterio.float32, count = 1)\n",
+    "\n",
+    "with rasterio.open(infilepath+'africa1k_2000_mask1000.tif', 'w', **kwargs) as dst:\n",
+    "        dst.write_band(1, WP2000_1000.astype(rasterio.float32))"
    ]
   },
   {
@@ -1012,9 +1046,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'rasterstats'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-47-6e088b83a1ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mrasterstats\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mzonal_stats\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# africa1k_2000_b1 = africa1k_2000.read(1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# africa1k_2020_b1 = africa1k_2020.read(1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'rasterstats'"
+     ]
+    }
+   ],
    "source": [
     "# from rasterstats import zonal_stats\n",
     "\n",
